--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,60 +1,76 @@
-<div class="col-md-12">
-  <div class="card card-container">
-    <form
-      *ngIf="!isLoggedIn"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          [(ngModel)]="form.username"
-          required
-          #username="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
-        />
-        <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
-          Username is required!
-        </div>
+<div
+  class="container-fluid d-flex align-items-center justify-content-center vh-100"
+>
+  <div class="col-md-6">
+    <div class="card card-container p-4 shadow-lg rounded" style="width: 100%">
+      <div class="text-center">
+        <h2 class="mb-4">Login to Your Account</h2>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="form.password"
-          required
-          minlength="6"
-          #password="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
-        />
-        <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
-          <div *ngIf="password.errors['required']">Password is required</div>
-          <div *ngIf="password.errors['minlength']">
-            Password must be at least 6 characters
+      <form
+        *ngIf="!isLoggedIn"
+        name="form"
+        (ngSubmit)="onSubmit()"
+        #f="ngForm"
+        novalidate
+      >
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            class="form-control"
+            name="username"
+            [(ngModel)]="form.username"
+            required
+            #username="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
+          />
+          <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
+            Username is required!
           </div>
         </div>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block">Login</button>
-      </div>
-      <div class="form-group">
-        <div
-          *ngIf="f.submitted && isLoginFailed"
-          class="alert alert-danger"
-          role="alert"
-        >
-          Login failed: {{ errorMessage }}
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            [(ngModel)]="form.password"
+            required
+            minlength="6"
+            #password="ngModel"
+            [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
+          />
+          <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
+            <div *ngIf="password.errors['required']">Password is required</div>
+            <div *ngIf="password.errors['minlength']">
+              Password must be at least 6 characters
+            </div>
+          </div>
         </div>
-      </div>
-    </form>
-
-    <div class="alert alert-success" *ngIf="isLoggedIn">Logged in as .</div>
+        <div class="form-group">
+          <button
+            type="button"
+            class="btn btn-primary btn-block"
+            (click)="onSubmit()"
+          >
+            Login
+          </button>
+        </div>
+        <div class="form-group">
+          <div
+            *ngIf="f.submitted && isLoginFailed"
+            class="alert alert-danger"
+            role="alert"
+          >
+            Login failed: {{ errorMessage }}
+          </div>
+        </div>
+        <div class="form-group text-center">
+          <a (click)="navigateToRegister()"
+            >Don't have an account? Register Now!</a
+          >
+        </div>
+      </form>
+    </div>
   </div>
 </div>
