--- a/src/app/components/epargne/epargne.component.html
+++ b/src/app/components/epargne/epargne.component.html
@@ -11,7 +11,7 @@
           <div class="col-md-12">
             <h2>Epargnes for Current User</h2>
             <button class="btn btn-success" (click)="navigateToAddEpargne()">
-              Ajouter une dépense
+              Ajouter une epargne
             </button>
             <ul class="list-group mt-3">
               <li *ngFor="let epargne of epargnes" class="list-group-item">
