--- a/src/app/components/depense/depense.component.html
+++ b/src/app/components/depense/depense.component.html
@@ -13,7 +13,7 @@
           <button class="btn btn-success" (click)="goToAddDepense()">
             Ajouter une dépense
           </button>
-          <table class="table">
+          <table class="table table-dark table-striped">
             <thead>
               <tr>
                 <th>ID</th>
