--- a/src/app/components/objectif/objectif.component.html
+++ b/src/app/components/objectif/objectif.component.html
@@ -18,7 +18,7 @@
             <div class="row">
               <!-- Display each objective using Bootstrap cards -->
               <div class="col-md-4 mb-4" *ngFor="let objectif of objectifs">
-                <div class="card">
+                <div class="card sh">
                   <div class="card-body">
                     <h5 class="card-title">{{ objectif.titre }}</h5>
                     <p class="card-text">
