--- a/src/app/components/epargne/epargne.component.html
+++ b/src/app/components/epargne/epargne.component.html
@@ -13,7 +13,7 @@
             <button class="btn btn-success" (click)="navigateToAddEpargne()">
               Ajouter une epargne
             </button>
-            <ul class="list-group mt-3">
+            <ul class="list-group mt-3 sh">
               <li *ngFor="let epargne of epargnes" class="list-group-item">
                 <div class="d-flex justify-content-between">
                   <div>
