--- a/src/app/components/revenue/revenue.component.html
+++ b/src/app/components/revenue/revenue.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="card-body">
               <div class="table-responsive">
-                <table class="table">
+                <table class="table table-dark table-striped">
                   <thead class="text-primary">
                     <th>ID</th>
                     <th>Date</th>
