--- a/src/app/components/categorie/categorie.component.html
+++ b/src/app/components/categorie/categorie.component.html
@@ -41,7 +41,7 @@
 
           <!-- Liste des catégories -->
           <h2 class="mt-4">Toutes les catégories</h2>
-          <ul class="list-group">
+          <ul class="list-group sh">
             <li
               *ngFor="let categorie of categories"
               class="list-group-item d-flex justify-content-between align-items-center"
