--- a/src/app/components/compte/compte.component.html
+++ b/src/app/components/compte/compte.component.html
@@ -16,7 +16,7 @@
 
         <div class="row">
           <div class="col-md-4" *ngFor="let compte of comptes">
-            <div class="card">
+            <div class="card sh">
               <div class="card-body">
                 <h5 class="card-title">{{ compte.nom }}</h5>
                 <p class="card-text">ID: {{ compte.id }}</p>
