--- a/src/app/components/budget/budget.component.html
+++ b/src/app/components/budget/budget.component.html
@@ -13,6 +13,7 @@
           <h2>Add Budget Categorie</h2>
 
           <form (ngSubmit)="addBudgetCategorie()">
+            <div class="form-select-lg mb-3">
             <label for="categorie">Category:</label>
             <select
               id="categorie"
@@ -25,7 +26,9 @@
                 {{ category.nom }}
               </option>
             </select>
+          </div>
 
+          <div class="form-select-lg mb-3">
             <label for="montantMensuel">Montant Mensuel:</label>
             <input
               type="number"
@@ -34,10 +37,11 @@
               [(ngModel)]="budgetCategorie.montantMensuel"
               required
             />
+          </div>
 
             <!-- Add other form fields as needed -->
 
-            <button type="submit">Add Budget Categorie</button>
+            <button class="btn btn-primary btn-lg" type="submit">Add Budget Categorie</button>
           </form>
         </div>
       </div>
