--- a/src/app/components/budget/budget.component.html
+++ b/src/app/components/budget/budget.component.html
@@ -34,6 +34,7 @@
               type="number"
               id="montantMensuel"
               name="montantMensuel"
+              class="form-control"
               [(ngModel)]="budgetCategorie.montantMensuel"
               required
             />
